<resources>
    <string name="app_name">ibcsPlayer</string>
    <string name="browse_title"><![CDATA[Videos by Your Company]]></string>
    <string name="related_movies">Related Videos</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>
    <string name="should_start">shouldStart</string>

    <!-- Error messages -->
    <string name="video_error_media_load_timeout">Media loading timed out</string>
    <string name="video_error_server_inaccessible">Media server was not reachable</string>
    <string name="video_error_unknown_error">Failed to load video</string>
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>

    <string-array name="dev_type">
        <item>TV</item>
        <item>平板</item>
    </string-array>
    <string-array name="dev_dire">
        <item>横版</item>
        <item>竖版</item>
    </string-array>
    <string-array name="dev_temp">
        <item>模板1</item>
        <item>模板2</item>
        <item>模板3</item>
        <item>模板4</item>
        <item>模板5</item>
        <item>模板6</item>
    </string-array>

    <string name="s_title"></string>
    <string name="s_loading">数据加载中...</string>
    <string name="s_back">返回</string>

    <string name="name">Name</string>
    <string name="id">ID</string>
    <string name="contentType">ContentType</string>
    <string name="xelUrl">XelUrl</string>
    <string name="playTime">PlayTime</string>
    <string name="isUrg">IsUrg</string>
    <string name="playStatus">PlayStatus</string>
</resources>
