<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <HorizontalScrollView
        android:id="@+id/headerScroll"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtId"
                android:layout_width="@dimen/cell_width"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/margin"
                android:gravity="center|start"
                android:text="@string/id"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtName"
                android:layout_width="@dimen/cell_width"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/margin"
                android:gravity="center|start"
                android:text="@string/name"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/txtContentType"
                android:layout_width="@dimen/cell_width"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/margin"
                android:gravity="center|start"
                android:text="@string/contentType"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtXelUrl"
                android:layout_width="@dimen/cell_width"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/margin"
                android:gravity="center|start"
                android:text="@string/xelUrl"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtPlayTime"
                android:layout_width="@dimen/cell_width"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/margin"
                android:gravity="center|start"
                android:text="@string/playTime"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtIsUrg"
                android:layout_width="@dimen/cell_width"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/margin"
                android:gravity="center|start"
                android:text="@string/isUrg"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtPlayStatus"
                android:layout_width="@dimen/cell_width"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/margin"
                android:gravity="center|start"
                android:text="@string/playStatus"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

        </LinearLayout>
    </HorizontalScrollView>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="blocksDescendants">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvPlaylist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
    </RelativeLayout>
</LinearLayout>